@@ -74,6 +74,7 @@ The following people and organizations have contributed code to XCSoar:
  Jörg Schuon <schuongf@hotmail.com>
  Ulisse Perusin <uli.peru@gmail.com>
  Moritz Finke <abzicht@gmail.com>
+ Lasse Edslev <lasse2905@gmail.com>
 
 Documentation:
 
