@@ -253,6 +253,36 @@ static constexpr ColorRamp terrain_colors[][NUM_COLOR_RAMP_LEVELS] = {
     {4500, { 175, 202, 242 }},
     {5500, { 175, 202, 242 }},
     {6000, { 175, 202, 242 }},
+   },
+   { // High Contrast low lands
+    {0, { 255, 247, 239 }},
+    {20, { 225, 225, 225 }},
+    {30, { 242, 242, 242 }},
+    {40, { 204, 223, 192 }},
+    {50, { 153, 199, 144 }},
+    {70, { 51, 151, 48 }},
+    {90, { 255, 255, 0 }},
+    {110, { 192, 128, 0 }},
+    {130, { 139, 22, 0 }},
+    {150, { 255, 255, 255 }},
+    {170, { 175, 202, 242 }},
+    {190, { 175, 202, 242 }},
+    {210, { 175, 202, 242 }},
+   },
+   { // Very low lands
+    {0, { 2, 77, 17 }}, 
+    {15,  { 2, 122, 58 }},
+    {25,  { 11, 128, 66 }},
+    {35,  { 6, 97, 19 }},
+    {45,  { 9, 110, 23 }},
+    {60,  { 11, 125, 27 }},
+    {70,  { 14, 140, 32 }},
+    {80,  { 18, 163, 39 }},
+    {95,  { 22, 196, 47}},
+    {105, { 122, 184, 29 }},
+    {115, { 186, 186, 17 }},
+    {130, { 135, 134, 134 }},
+    {145, { 232, 230, 230 }},
    }
 };
 static_assert(ARRAY_SIZE(terrain_colors) == TerrainRendererSettings::NUM_RAMPS,
